tests/Core/negative/parsing/test021.jvc
type Unit {
  unit : Unit;
};

case unit of {
  unit x := 0;
}
